# backup_v2

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
app/: apps.py  auth.py  models.py  serializers.py  urls.py  views.py
app/management/commands/: seed_users.py
backups/: auth.py  urls.py  views.py
backups/templates/: backup_gui.html
config/: settings.py  urls.py
static/: app.js
static/css/: style.css
